[gd_scene load_steps=14 format=3 uid="uid://db0lgg5o1033u"]

[ext_resource type="Script" path="res://Characters/golem_npc.gd" id="1_cyxbc"]
[ext_resource type="Resource" uid="uid://cffhbv8okplrm" path="res://inventory/items/crystal.tres" id="2_lld8v"]
[ext_resource type="Texture2D" uid="uid://wjbbx7ojd3xg" path="res://levels/3level/pixilart-sprite (8) (1).png" id="3_t4hrk"]
[ext_resource type="Texture2D" uid="uid://kede5mrvcnlo" path="res://levels/4level/crystal_04_blue.png" id="5_06slb"]
[ext_resource type="Texture2D" uid="uid://bjlil2kbetjap" path="res://inventory/images/inventory-background.png" id="6_x7y7w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r6v64"]
radius = 48.0
height = 96.0

[sub_resource type="AtlasTexture" id="AtlasTexture_eliqr"]
atlas = ExtResource("3_t4hrk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_agaxq"]
atlas = ExtResource("3_t4hrk")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei5mf"]
atlas = ExtResource("3_t4hrk")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkpqv"]
atlas = ExtResource("3_t4hrk")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dom3d"]
atlas = ExtResource("3_t4hrk")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0srq"]
atlas = ExtResource("3_t4hrk")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_m1rm5"]
animations = [{
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_eliqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agaxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei5mf")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_xkpqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dom3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0srq")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}, {
"frames": [],
"loop": true,
"name": &"done",
"speed": 5.0
}]

[node name="Golem NPC" type="Node2D"]
script = ExtResource("1_cyxbc")
crystal = ExtResource("2_lld8v")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 29)
shape = SubResource("CapsuleShape2D_r6v64")

[node name="Animated Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 28)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_m1rm5")

[node name="space" type="Label" parent="."]
texture_filter = 1
offset_left = -23.0
offset_top = -37.0
offset_right = 23.0
offset_bottom = -14.0
text = "Space"

[node name="QuestBoards" type="Node2D" parent="."]

[node name="GolemQuestBoard" type="NinePatchRect" parent="QuestBoards"]
texture_filter = 1
offset_left = -39.0
offset_top = -58.0
offset_right = 26.0
offset_bottom = -22.0
scale = Vector2(1.2, 1.2)
texture = ExtResource("6_x7y7w")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="NotFixed" type="Node2D" parent="QuestBoards/GolemQuestBoard"]
scale = Vector2(0.8, 0.8)

[node name="Crystal" type="Sprite2D" parent="QuestBoards/GolemQuestBoard/NotFixed"]
position = Vector2(71.875, 21.875)
texture = ExtResource("5_06slb")

[node name="Arrow" type="Label" parent="QuestBoards/GolemQuestBoard/NotFixed"]
texture_filter = 1
offset_left = 32.2917
offset_top = 17.7083
offset_right = 50.2917
offset_bottom = 45.7083
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 20
text = "->"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Arrow3" type="Label" parent="QuestBoards/GolemQuestBoard/NotFixed"]
texture_filter = 1
offset_left = 44.7917
offset_top = 17.7083
offset_right = 84.7917
offset_bottom = 45.7083
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 20
text = "x 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Arrow2" type="Label" parent="QuestBoards/GolemQuestBoard/NotFixed"]
texture_filter = 1
offset_left = 1.04167
offset_top = 15.625
offset_right = 61.0417
offset_bottom = 43.625
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 20
text = "à²¥_à²¥"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fixed" type="Node2D" parent="QuestBoards/GolemQuestBoard"]

[node name="yay" type="Label" parent="QuestBoards/GolemQuestBoard/Fixed"]
texture_filter = 1
offset_left = -19.1667
offset_top = 8.33333
offset_right = 81.8336
offset_bottom = 31.3333
text = "ðŸ˜„ðŸ™Œ"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
